fix(docs): fix akveo services banner alignment

--- a/docs/app/@theme/components/hubspot-cta/akveo-services-banner.component.scss
+++ b/docs/app/@theme/components/hubspot-cta/akveo-services-banner.component.scss
@@ -1,4 +1,5 @@
 :host {
+  padding-left: 1rem;
   margin-top: 2rem;
   display: block;
 }
